# great-movie-finder

./: .gitignore  README.md  TODO.md  package.json
client/: README.md  package.json
client/src/: App.js  global-styles.js  index.js
client/utils/: database.js
csvHandling/: README.md  filter_csv.py
dbManipulation/: data.csv  data.json  dbcommands.md  extractGenres.js  fetchFromTmdb.js  insertDataIntoDB.js  knex.js  package.json  queries.js
omdb-best-series/: index.js
process_csv/: .gitignore  Dockerfile  README.md  actors_to_movies.py  config.py  create_csv.py  create_db.py  delete_file.py  dl.py  download_file.py  download_unzip.py  extract_genres.py  filter_csv.py  find_process_csv.py  is_sorted.py  merge_csv.py  merge_filter.py  movies_to_genres.py  run.sh  run_all.py  setup_db.sh  shell.nix  to_sqlite.py  unzip_tsv.py
process_csv/find_more_data/: Cargo.toml  default.nix
process_csv/find_more_py/: shell.nix
process_csv/server/: Cargo.toml
process_csv/server/src/: main.rs  templates.rs
process_csv/server/templates/: base.html  movie.html  movies.html
process_csv/uflix_server/: .gitignore  Cargo.toml  test.sqlite  transfer.sh
process_csv/uflix_server/assets/css/: custom.css  filter.css  movies.css
process_csv/uflix_server/assets/js/: filter.js
process_csv/uflix_server/src/: main.rs  models.rs  routes.rs  templates.rs
process_csv/uflix_server/templates/: about.html  base.html  filter.html  movie.html  movie_grid.html  movies.html  pagination.html
server/: DockerCommands  Dockerfile  index.js  package.json  server.js
server/routes/: api.js  (+2 more)
(+33 files in other folders)
