[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7.7"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.214", features = ["derive"] }
askama_axum = "0.4.0"