[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7.7", features = ["macros"] }
rusqlite = { version = "0.32.1" }
serde = { version = "1.0.214", features = ["derive"] }
askama_axum = "0.4.0"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
axum-extra = { version = "0.9.4", features = ["query"] }
lazy_static = "1.5.0"
base64 = "0.22.1"
reqwest = { version = "0.12.9", features = ["default-tls", "json"] }
sha2 = "0.10.8"

